--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
     "vitest": "^2.1.4"
   },
   "scripts": {
-  "test:unit": "vitest",
+  "test:unit": "vitest run",
   "test:api": "npx playwright test --project=API",
   "test:ui": "npx playwright test --project=UI",
   "test": "npm run test:unit && npm run test:api && npm run test:ui"
 }
+
 }
