--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "devDependencies": {
     "@playwright/test": "^1.48.2",
-    "vitest": "^2.1.4"
+    "vitest": "^2.1.4",
+    "@types/node": "^20.5.9"          
   },
   "scripts": {
-  "test:unit": "vitest run",
-  "test:api": "npx playwright test --project=API",
-  "test:ui": "npx playwright test --project=UI",
-  "test": "npm run test:unit && npm run test:api && npm run test:ui"
-}
-
+    "build": "tsc",                 
+    "test:unit": "vitest run",
+    "test:api": "npx playwright test --project=API",
+    "test:ui": "npx playwright test --project=UI",
+    "test": "npm run test:unit && npm run test:api && npm run test:ui"
+  }
 }
