--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "devDependencies": {
     "@playwright/test": "^1.48.2",
-    "vitest": "^2.1.4",
-    "@types/node": "^20.5.9"          
+    "@types/jest": "^29.5.14",
+    "@types/node": "^20.5.9",
+    "vitest": "^2.1.4"
   },
   "scripts": {
-    "build": "tsc",                 
+    "build": "tsc",
     "test:unit": "vitest run",
     "test:api": "npx playwright test --project=API",
     "test:ui": "npx playwright test --project=UI",
